Upload swagger
